--- a/WebApplication1/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebApplication1/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">WebApplication1</a>
+      <a class="navbar-brand" [routerLink]="['/']">JZQGWT - Szakdoglozat</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -28,13 +28,13 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
+            <a class="nav-link text-dark" [routerLink]="['/projects']"
+              >Projects</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
+              >Account</a
             >
           </li>
         </ul>
