change project nad base namespace names to Szakdolgozat

--- a/WebApplication1/Pages/_ViewImports.cshtml
+++ b/WebApplication1/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WebApplication1
-@namespace WebApplication1.Pages
+﻿@using Szakdolgozat
+@namespace Szakdolgozat.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
