--- a/WebApplication1/Pages/Shared/_LoginPartial.cshtml
+++ b/WebApplication1/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using WebApplication1.Models;
+@using Szakdolgozat.Models;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
