--- a/WebApplication1/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WebApplication1/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,22 +20,17 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
+          <li class="nav-item" [routerLinkActive]="['link-active']" [routerLinkActiveOptions]="{ exact: true }" >
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/projects']"
-              >Projects</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/projects']">Projects</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Account</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/account']">Account</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/accounts']">Profiles</a>
           </li>
         </ul>
         <app-login-menu></app-login-menu>
