--- a/WebApplication1/ClientApp/src/app/account/account.component.html
+++ b/WebApplication1/ClientApp/src/app/account/account.component.html
@@ -2,20 +2,20 @@
     <section>
         <div class="form-group">
             <label for="name" class="control-label">Name: </label>
-            <input id="name" class="form-control" type="text" value="{{Account.name}}"/>
+            <input id="name" class="form-control" type="text" [(ngModel)]="name"/>
         </div>
         <div class="form-group">
-            <label for="username" class="control-label">Userame: </label>
+            <label for="username" class="control-label">Username: </label>
             <input readonly id="username" class="form-control" type="text" value="{{Account.username}}"/>
         </div>
         <div class="form-group">
             <label for="phone" class="control-label">Phone: </label>
-            <input id="phone" class="form-control" type="tel" value="{{Account.phoneNumber}}"/>
+            <input id="phone" class="form-control" type="tel" [(ngModel)]="phoneNumber"/>
         </div>
         <div class="form-group">
             <label for="email" class="control-label">Email: </label>
-            <input id="email" class="form-control" type="text" value="{{Account.email}}"/>
+            <input id="email" class="form-control" type="text" [(ngModel)]="email"/>
         </div>
-        <button class="btn btn-primary btn-block">Save Changes</button>
+        <button class="btn btn-primary btn-block" (click)="edit()">Save Changes</button>
     </section>
 </div>
