--- a/WebApplication1/ClientApp/src/app/update-project/update-project.component.html
+++ b/WebApplication1/ClientApp/src/app/update-project/update-project.component.html
@@ -1,1 +1,13 @@
-<p>update-project works!</p>
+<div class="container">
+    <section>
+        <div class="form-group">
+            <label for="name" class="control-label">Name: </label>
+            <input id="name" class="form-control" type="text" [(ngModel)]="name"/>
+        </div>
+        <div class="form-group">
+            <label for="email" class="control-label">Add people to the project (username, with ';' separation): </label>
+            <input id="email" class="form-control" type="text" [(ngModel)]="users"/>
+        </div>
+        <button class="btn btn-primary btn-block" (click)="edit()">Save Changes</button>
+    </section>
+</div>
