--- a/WebApplication1/ClientApp/src/app/accounts/accounts.component.html
+++ b/WebApplication1/ClientApp/src/app/accounts/accounts.component.html
@@ -1,11 +1,13 @@
 <div class="container">
-    <div class="card" style="width: 18rem;" *ngFor="let account of Accounts">
+    <span class="card" style="width: 18rem;" *ngFor="let account of Accounts; let i = index">
         <div class="card-body">
             <h5 class="card-title">{{account.name}}</h5>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Phone: {{account.phoneNumber}}</li>
-                <li class="list-group-item">Email: {{account.email}}</li>
-            </ul>
+            <p class="card-subtitle mb-2 text-muted">Username: {{account.username}}</p>
+            <p class="card-text">Phone: {{account.phoneNumber}}</p>
+            <p class="card-text">Email: {{account.email}}</p>
         </div>
-    </div>
+        <div *ngIf="User.uniqueRoles.includes('ADMIN')">
+            <button class="btn btn-primary btn-block" (click)="edit(i)">Edit</button>
+        </div>
+    </span>
 </div>
