--- a/WebApplication1/ClientApp/src/app/create-task/create-task.component.html
+++ b/WebApplication1/ClientApp/src/app/create-task/create-task.component.html
@@ -1,1 +1,33 @@
-<p>create-task works!</p>
+<div class="container">
+    <section>
+        <div class="form-group">
+            <label for="name" class="control-label">Name: </label>
+            <input id="name" class="form-control" type="text" [(ngModel)]="name"/>
+        </div>
+        <div class="form-group">
+            <label for="priority" class="control-label">Priority: </label>
+            <input id="priority" class="form-control" type="text" [(ngModel)]="priority"/>
+        </div>
+        <div class="form-group">
+            <label for="type" class="control-label">Type: </label>
+            <input id="type" class="form-control" type="text" [(ngModel)]="type"/>
+        </div>
+        <div class="form-group">
+            <label for="desc" class="control-label">Description</label>
+            <textarea id="desc" class="form-control" [(ngModel)]="description"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="sub" class="control-label">Add subtasks to the task (description, with ';' separation): </label>
+            <input id="sub" class="form-control" type="text" [(ngModel)]="subtasks"/>
+        </div>
+        <div class="form-group">
+            <label for="users" class="control-label">Add people to the task (username, with ';' separation): </label>
+            <input id="users" class="form-control" type="text" [(ngModel)]="users"/>
+        </div>
+        <div class="form-group">
+            <label for="date" class="control-label">Deadline: </label>
+            <input id="date" class="form-control" type="date" [(ngModel)]="date"/>
+        </div>
+        <button class="btn btn-primary btn-block" (click)="create()">Create task</button>
+    </section>
+</div>
