--- a/WebApplication1/ClientApp/src/app/create-project/create-project.component.html
+++ b/WebApplication1/ClientApp/src/app/create-project/create-project.component.html
@@ -5,6 +5,10 @@
             <input id="name" class="form-control" type="text" [(ngModel)]="name"/>
         </div>
         <div class="form-group">
+            <label for="com" class="control-label">Company: </label>
+            <input id="com" class="form-control" type="text" [(ngModel)]="company"/>
+        </div>
+        <div class="form-group">
             <label for="email" class="control-label">Add people to the project (username, with ';' separation): </label>
             <input id="email" class="form-control" type="text" [(ngModel)]="users"/>
         </div>
