--- a/WebApplication1/ClientApp/src/app/task/task.component.html
+++ b/WebApplication1/ClientApp/src/app/task/task.component.html
@@ -46,8 +46,8 @@
                 </div>
             </div>
             <div class="container">
-                <textarea placeholder="Comment" class="form-control comment-input"></textarea>
-                <button class="btn btn-primary btn-block" (click)="comment">Comment</button>
+                <textarea placeholder="Comment" class="form-control comment-input" [(ngModel)]="Comment"></textarea>
+                <button class="btn btn-primary btn-block" (click)="comment()">Comment</button>
             </div>
         </div>
     </section>
