--- a/WebApplication1/ClientApp/src/app/update-task/update-task.component.html
+++ b/WebApplication1/ClientApp/src/app/update-task/update-task.component.html
@@ -6,17 +6,21 @@
         </div>
         <div class="form-group">
             <label for="priority" class="control-label">Priority: </label>
-            <input id="priority" class="form-control" type="text" [(ngModel)]="priority"/>
+            <select id="priority" class="form-control" [(ngModel)]="priority">
+                <option value="1">Low</option>
+                <option value="2">Normal</option>
+                <option value="3">High</option>
+                <option value="4">Immediate</option>
+            </select>
         </div>
         <div class="form-group">
             <label for="type" class="control-label">Type: </label>
             <input id="type" class="form-control" type="text" [(ngModel)]="type"/>
         </div>
         <div class="form-group">
-            <label for="status" class="control-label">Current status: {{status}}</label>
             <label for="status" class="control-label">Status: </label>
             <select [(ngModel)]="status">
-                <option id="Waiting for begin">Waiting for begin</option>
+                <option id="New">New</option>
                 <option id="In progress">In progress</option>
                 <option id="Stuck">Stuck</option>
                 <option id="Completed">Completed</option>
@@ -24,19 +28,21 @@
         </div>
         <div class="form-group">
             <label for="desc" class="control-label">Description</label>
-            <textarea id="desc" class="form-control" [(ngModel)]="description"></textarea>
+            <textarea type="text" id="desc" class="form-control" [(ngModel)]="description"></textarea>
         </div>
         <div class="form-group">
             <label for="sub" class="control-label">Add subtasks to the task (description, with ';' separation): </label>
             <input id="sub" class="form-control" type="text" [(ngModel)]="subtasks"/>
         </div>
         <div class="form-group">
-            <label for="users" class="control-label">Add people to the task (username, with ';' separation): </label>
-            <input id="users" class="form-control" type="text" [(ngModel)]="users"/>
+            <label for="users" class="control-label">Add people to the task: </label>
+            <ul *ngFor="let cand of Users; let i = index">
+                <p><input type="checkbox" [(ngModel)]="Selected[i]" checked=Selected[i]/> {{cand}}</p>
+            </ul>
         </div>
         <div class="form-group">
             <label for="date" class="control-label">Deadline: </label>
-            <input id="date" class="form-control" type="date" [(ngModel)]="date"/>
+            <input id="date" class="form-control" type="date" [(ngModel)]="date" value="{{date}}"/>
         </div>
         <button class="btn btn-primary btn-block" (click)="edit()">Update task</button>
         <button class="btn btn-secondary btn-block" (click)="back()">Back to project</button>
